[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Enemies/ChasePlayer.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/temp_demon.png" type="Texture" id=2]
[ext_resource path="res://src/Enemies/EnemyFSM.gd" type="Script" id=3]
[ext_resource path="res://src/Enemies/EnemyIdle.gd" type="Script" id=4]
[ext_resource path="res://src/Enemies/EnemyChase.gd" type="Script" id=5]
[ext_resource path="res://src/Enemies/EnemyDamaged.gd" type="Script" id=6]
[ext_resource path="res://src/Enemies/EnemyStunned.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 121.374

[node name="Demon" type="KinematicBody2D" groups=[
"enemy",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AgroRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AgroRadius"]
shape = SubResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
START_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Damaged" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Stunned" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_right = 56.0
margin_bottom = 14.0
text = "test"

[node name="Label2" type="Label" parent="."]
margin_left = 15.6415
margin_top = -18.2828
margin_right = 55.6415
margin_bottom = -4.28278
text = "test"

[node name="Label3" type="Label" parent="."]
margin_left = 16.3585
margin_top = -32.2637
margin_right = 56.3585
margin_bottom = -18.2637
text = "test"

[node name="Label4" type="Label" parent="."]
margin_left = 16.0
margin_top = -45.1692
margin_right = 56.0
margin_bottom = -31.1692
text = "test"
[connection signal="damageTaken" from="." to="StateMachine" method="_on_Demon_damageTaken"]
[connection signal="stunTaken" from="." to="StateMachine" method="_on_Demon_stunTaken"]
[connection signal="body_entered" from="AgroRadius" to="." method="_on_AgroRadius_body_entered"]
[connection signal="body_exited" from="AgroRadius" to="." method="_on_AgroRadius_body_exited"]
